[gd_scene load_steps=8 format=3 uid="uid://bypsyfcv0i1pr"]

[ext_resource type="Script" path="res://scripts/Camera.gd" id="1_rq6y6"]
[ext_resource type="Script" path="res://scripts/Settings.gd" id="2_0uxv0"]
[ext_resource type="Script" path="res://scripts/Controls.gd" id="3_xtjok"]
[ext_resource type="Script" path="res://scripts/paths.gd" id="4_uia07"]
[ext_resource type="Script" path="res://scripts/entities/Entities.gd" id="5_ngn2g"]
[ext_resource type="Script" path="res://scripts/graphics/Graphics.gd" id="6_fwj04"]
[ext_resource type="Script" path="res://scripts/entities/Player.gd" id="7_dygwg"]

[node name="Node2D" type="Node2D"]
metadata/_edit_horizontal_guides_ = [-981.0]

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("1_rq6y6")
camera_x_bound = 3000
camera_y_bound = 3100

[node name="Settings" type="Node" parent="."]
script = ExtResource("2_0uxv0")

[node name="Controls" type="Node" parent="."]
script = ExtResource("3_xtjok")

[node name="Pathfinding" type="Node" parent="."]
script = ExtResource("4_uia07")

[node name="Entities" type="Node" parent="."]
script = ExtResource("5_ngn2g")

[node name="Graphics" type="Node" parent="."]
script = ExtResource("6_fwj04")

[node name="Player" type="Node" parent="."]
script = ExtResource("7_dygwg")

[connection signal="ability_1" from="Controls" to="Player" method="_on_controls_ability_1"]
[connection signal="ability_2" from="Controls" to="Player" method="_on_controls_ability_2"]
[connection signal="ability_3" from="Controls" to="Player" method="_on_controls_ability_3"]
[connection signal="ability_4" from="Controls" to="Player" method="_on_controls_ability_4"]
[connection signal="group_1" from="Controls" to="Player" method="_on_controls_group_1"]
[connection signal="group_2" from="Controls" to="Player" method="_on_controls_group_2"]
[connection signal="group_3" from="Controls" to="Player" method="_on_controls_group_3"]
[connection signal="group_4" from="Controls" to="Player" method="_on_controls_group_4"]
[connection signal="group_5" from="Controls" to="Player" method="_on_controls_group_5"]
[connection signal="group_6" from="Controls" to="Player" method="_on_controls_group_6"]
[connection signal="mouse_point_highlight_position" from="Controls" to="Graphics" method="_on_controls_manager_mouse_point_highlight_position"]
[connection signal="mouse_point_index" from="Controls" to="Player" method="_on_controls_mouse_point_index"]
[connection signal="move_attack" from="Controls" to="Graphics" method="_on_controls_move_attack"]
[connection signal="move_attack" from="Controls" to="Player" method="_on_controls_move_attack"]
[connection signal="queue_mod" from="Controls" to="Player" method="_on_controls_queue_mod"]
[connection signal="select" from="Controls" to="Graphics" method="_on_controls_select"]
[connection signal="selected_entities" from="Controls" to="Player" method="_on_controls_selected_entities"]
[connection signal="ready" from="Player" to="Graphics" method="_on_player_ready"]
